src/objects/G4S__User_Settings__c.object
<CustomObject>
    <fields>
        <fullName>G4S__Chatter_When_Scheduling_Glance_Meeting__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Allows users to post Scheduled Glance Meetings in their Chatter feeds.</inlineHelpText>
        <label>Chatter When Scheduling Glance Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G4S__Chatter_When_Starting_Glance_Session__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Allows users to post Started Glance Sessions in their Chatter feeds.</inlineHelpText>
        <label>Chatter When Starting Glance Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G4S__Create_Leads_From_Session_Guests__c</fullName>
        <inlineHelpText>Glance can ask guests for contact info when they join your sessions and use it to create new Leads when appropriate.</inlineHelpText>
        <label>Create Leads for Session Guests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                    <default>true</default>
                    <label>Never</label>
                </value>
                <value>
                    <fullName>Who Provide a New Email and Name</fullName>
                </value>
                <value>
                    <fullName>Who Provide a New Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G4S__Default_Conference_Phone__c</fullName>
        <inlineHelpText>Enter your own service’s info or click the button for your “Free Glance Phone Conferencing”.</inlineHelpText>
        <label>Conference Phone for Meeting Requests</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>G4S__Default_Session_Key_Type__c</fullName>
        <label>Default Session Key Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Default_Session_Key__c</fullName>
        <inlineHelpText>This applies to each session started inside Salesforce</inlineHelpText>
        <label>Default Session Key</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Glance_Address__c</fullName>
        <inlineHelpText>Need a Glance Account? Click the &quot;Get Free Glance Trial&quot; button.</inlineHelpText>
        <label>Your Glance Address (Ex: pam.glance.net)</label>
        <length>63</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>G4S__Glance_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not the specified Glance username is a Glance Administrator account</description>
        <label>Glance Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G4S__Glance_Credentials__c</fullName>
        <label>Glance Credentials</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Group_ID__c</fullName>
        <inlineHelpText>ID for Glance customer account this user is associated with.</inlineHelpText>
        <label>Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Group_Name__c</fullName>
        <inlineHelpText>Glance customer account this user is associated with.</inlineHelpText>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Guest_Code__c</fullName>
        <inlineHelpText>Used by your guests to enter the phone conference.</inlineHelpText>
        <label>Guest Passcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Host_Code__c</fullName>
        <inlineHelpText>Used to enter the phone conference as one of the leaders.</inlineHelpText>
        <label>Host Passcode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__How_Do_You_Use_Salesforce__c</fullName>
        <label>How do you use Salesforce?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mostly for Sales</fullName>
                </value>
                <value>
                    <fullName>Mostly for Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G4S__Ignore_Unmatched_Glance_Sessions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Ignore Unmatched Glance Sessions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>G4S__Plan_Name__c</fullName>
        <inlineHelpText>Rate structure associated with this user&apos;s Glance Address.</inlineHelpText>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__Primary_Match__c</fullName>
        <inlineHelpText>Glance tries to automatically relate a Contact&apos;s most relevant Case or Opportunity to each Session Event created from that Contact.  (Choose &quot;nothing&quot; to avoid creating a relation.)</inlineHelpText>
        <label>xxxPrimary Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G4S__Secondary_Match__c</fullName>
        <inlineHelpText>Choose the second most likely object</inlineHelpText>
        <label>xxxSecondary Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G4S__Trial_End_Date__c</fullName>
        <inlineHelpText>Your Glance subscription expires on this date.</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>G4S__User_Name__c</fullName>
        <formula>G4S__User__r.FirstName &amp; &quot; &quot; &amp;  G4S__User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for display purposes on the Company Settings page, Primary Glance Admin picklist values.</inlineHelpText>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G4S__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Glance_User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Glance User Settings</label>
    <nameField>
        <label>Glance User Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Glance User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>